# incubator-noterunner

./: .gitignore  CONTRIBUTING.md  README.md  README.zh.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: checker.yml  publish.yml
src/: App.vue  fontawesome.ts  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  main.rs  note.rs
src-tauri/src/response/: mod.rs  response.rs
src-tauri/src/storage/: mod.rs  storage.rs
src/components/: Greet.vue  MarkdownEditor.vue  RichEditor.vue
src/layout/: LayoutContainer.vue
src/layout/compoments/: LayoutAside.vue  LayoutContent.vue  LayoutFooter.vue  LayoutHeader.vue
src/model/: note.ts  response.ts
src/note/: home.ts
src/router/: index.ts
src/views/: HomeView.vue
