[package]
name = "Notepad"
version = "1.0.0"
description = "Easy to use dedicated notepad"
authors = ["qianmoq <shicheng@devlive.org>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.29.0"
log = "0.4.20"
lazy_static = { version = "1.4.0", features = [] }
parking_lot = { version = "0.12.1", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
